@@ -1,18 +1,20 @@
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import java.io.File;
 import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import java.util.stream.Collectors;
 
 public class Notebook {
 
     ObjectMapper objectMapper = new ObjectMapper();
     String filename;
 
-    /** Init new notebook that stores notes in json file with given name */
+    /**
+     * Init new notebook that stores notes in json file with given name */
     public Notebook(String filename) throws IOException {
         this.filename = filename;
         File file = new File(filename);
@@ -22,14 +24,16 @@ public class Notebook {
         }
     }
 
-    /** Clear file */
+    /**
+     * Clear file */
     public void clear() throws IOException {
         File file = new File(filename);
         List<Note> empty = new ArrayList<>();
         objectMapper.writeValue(file, empty);
     }
 
-    /** Add new note to file
+    /**
+     * Add new note to file
      * if note with the same name already exists nothing happens. */
     public void add(String name, String text) throws IOException {
         Note newNote = new Note(name, text);
@@ -44,15 +48,17 @@ public class Notebook {
         objectMapper.writeValue(file, notes);
     }
 
-    /** Removes note with given name. If there are no such note nothing happens */
+    /**
+     * Removes note with given name. If there are no such note nothing happens */
     public void remove(String name) throws IOException {
         File file = new File(filename);
         List<Note> notes = objectMapper.readValue(file, new TypeReference<List<Note>>(){});
-        notes = notes.stream().filter(note -> !note.getName().equals(name)).toList();
+        notes = notes.stream().filter(note -> !note.getName().equals(name)).collect(Collectors.toList());
         objectMapper.writeValue(file, notes);
     }
 
-    /** Writes all notes */
+    /**
+     * Writes all notes */
     public void show() throws IOException {
         List<Note> notes = get();
         for (Note note : notes){
@@ -60,7 +66,8 @@ public class Notebook {
         }
     }
 
-    /** Writes all notes that were created from timeL to timeR
+    /**
+     * Writes all notes that were created from timeL to timeR
      * and have at least one keyword in a name. */
     public void show(LocalDateTime timeL, LocalDateTime timeR, String[] keywords) throws IOException {
         List<Note> notes = get(timeL, timeR, keywords);
@@ -69,18 +76,20 @@ public class Notebook {
         }
     }
 
-    /** Returns list of all notes */
+    /**
+     * Returns list of all notes */
     public List<Note> get() throws IOException {
         File file = new File(filename);
         return objectMapper.readValue(file, new TypeReference<List<Note>>() {});
     }
 
-    /** Returns list of all notes that were created from timeL to timeR
+    /**
+     * Returns list of all notes that were created from timeL to timeR
      * and have at least one keyword in a name. */
     public List<Note> get(LocalDateTime timeL, LocalDateTime timeR, String[] keywords) throws IOException {
         File file = new File(filename);
         List<Note> notes = objectMapper.readValue(file, new TypeReference<List<Note>>() {});
-        return notes.stream().filter(note -> noteCheck(note, timeL, timeR, keywords)).toList();
+        return notes.stream().filter(note -> noteCheck(note, timeL, timeR, keywords)).collect(Collectors.toList());
     }
 
     private boolean noteCheck(Note note, LocalDateTime timeL, LocalDateTime timeR, String[] keywords) {
